--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,15 +5,15 @@ steps:
      args:
      - -c
      - |
-       docker build -t us-central1-docker.pkg.dev/$PROJECT_ID/$_CONTAINER_REPO_NAME/cd:$REVISION_ID -f ./Dockerfile . &&
-       docker image inspect us-central1-docker.pkg.dev/$PROJECT_ID/$_CONTAINER_REPO_NAME/cd:$REVISION_ID
+       docker build -t asia-southeast2-docker.pkg.dev/$PROJECT_ID/$_CONTAINER_REPO_NAME/cd:$REVISION_ID -f ./Dockerfile . &&
+       docker image inspect asia-southeast2-docker.pkg.dev/$PROJECT_ID/$_CONTAINER_REPO_NAME/cd:$REVISION_ID
    - id: Scan The Image
      name: 'gcr.io/cloud-builders/gcloud'
      entrypoint: /bin/bash
      args:
      - -c
      - |
-       gcloud artifacts docker images scan us-central1-docker.pkg.dev/$PROJECT_ID/$_CONTAINER_REPO_NAME/cd:$REVISION_ID \
+       gcloud artifacts docker images scan asia-southeast2-docker.pkg.dev/$PROJECT_ID/$_CONTAINER_REPO_NAME/cd:$REVISION_ID \
        --format='value(response.scan)' > /workspace/scan_id.txt
    - id: Check For Vulnerabilities within the Image
      name: 'gcr.io/cloud-builders/gcloud'
@@ -30,14 +30,14 @@ steps:
      args:
      - -c
      - |
-       docker push us-central1-docker.pkg.dev/$PROJECT_ID/$_CONTAINER_REPO_NAME/cd:$REVISION_ID
+       docker push asia-southeast2-docker.pkg.dev/$PROJECT_ID/$_CONTAINER_REPO_NAME/cd:$REVISION_ID
    - id: Capture Image Digest Information
      name: 'gcr.io/cloud-builders/gcloud'
      entrypoint: /bin/bash
      args:
       - -c
       - |
-        gcloud container images describe us-central1-docker.pkg.dev/$PROJECT_ID/$_CONTAINER_REPO_NAME/cd:$REVISION_ID \
+        gcloud container images describe asia-southeast2-docker.pkg.dev/$PROJECT_ID/$_CONTAINER_REPO_NAME/cd:$REVISION_ID \
         --format='get(image_summary.digest)' > /workspace/digest.txt
    - id: Change permissions on create_binauthz_policy.sh
      name: bash
@@ -55,12 +55,12 @@ steps:
      args:
       - -c
       - |
-        gcloud deploy releases create r-$REVISION_ID --project=$PROJECT_ID --region=us-central1 --delivery-pipeline=ci-cd-test --images=notes-app-image=us-central1-docker.pkg.dev/$PROJECT_ID/$_CONTAINER_REPO_NAME/cd@$(cat /workspace/digest.txt)
+        gcloud deploy releases create r-$REVISION_ID --project=$PROJECT_ID --region=asia-southeast2 --delivery-pipeline=ci-cd-test --images=notes-app-image=asia-southeast2-docker.pkg.dev/$PROJECT_ID/$_CONTAINER_REPO_NAME/cd@$(cat /workspace/digest.txt)
    - id: Promote/deploy cloud deploy release to next stage ie staging  
      name: gcr.io/cloud-builders/gcloud
-     args: ['deploy', 'releases', 'promote', '--release=r-$REVISION_ID','--project=$PROJECT_ID','--region=us-central1','--delivery-pipeline=ci-cd-test', '--to-target=staging']
+     args: ['deploy', 'releases', 'promote', '--release=r-$REVISION_ID','--project=$PROJECT_ID','--region=asia-southeast2','--delivery-pipeline=ci-cd-test', '--to-target=staging']
    - id: Promote/deploy cloud deploy release to next stage ie prod 
      name: gcr.io/cloud-builders/gcloud
-     args: ['deploy', 'releases', 'promote', '--release=r-$REVISION_ID','--project=$PROJECT_ID','--region=us-central1','--delivery-pipeline=ci-cd-test', '--to-target=prod']
-images: ['us-central1-docker.pkg.dev/$PROJECT_ID/$_CONTAINER_REPO_NAME/cd:$REVISION_ID']
+     args: ['deploy', 'releases', 'promote', '--release=r-$REVISION_ID','--project=$PROJECT_ID','--region=asia-southeast2','--delivery-pipeline=ci-cd-test', '--to-target=prod']
+images: ['asia-southeast2-docker.pkg.dev/$PROJECT_ID/$_CONTAINER_REPO_NAME/cd:$REVISION_ID']
 
